--- a/css/styles.css
+++ b/css/styles.css
@@ -78,3 +78,57 @@
   .container h1, h3{
     color:white;
   }
+
+  .selected {
+    font-weight: bold;
+    color:#fd6440;
+  }
+
+  .pagination a{
+    text-align: center;
+    padding-right: 12px;
+
+  }
+  .page-count {
+    margin-left:20px;
+  }
+
+  .navbar {
+    background-color: #fd6440;
+  }
+
+.navbar-light .navbar-brand {
+  color: white;
+}
+
+
+.navbar-light .navbar-nav .active>.nav-link, {
+  color: whte;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: white;
+}
+
+@media screen and (min-width: 1050px) {
+    .navbar{
+      display:none;
+    }
+}
+
+
+
+  @media screen and (max-width: 1050px) {
+		  #aside{
+        display:none;
+      }
+
+      #create-aside{
+        display:none;
+      }
+
+
+      .menu-bar {
+        display:none;
+      }
+}
