--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 
-
   .btn {
     background-color: #fd6440;
     color: white;
@@ -10,8 +9,8 @@
   }
 
   #create-aside {
-    width:200px;
     height:810px;
+    width:200px;
   }
 
   img {
@@ -36,17 +35,13 @@
   }
 
   .row-seperator {
-    margin-left:50px;
     background-color: #324047;
     height: 50px;
-    width: 1200px;
   }
 
   .menu-bar {
     background-color: #fd6440;
     height: 50px;
-    width:1200px;
-
   }
 
   .aside-menu {
@@ -57,22 +52,19 @@
     margin-left: 50px;
   }
 
-  .table {
-    margin-left: 50px;
-  }
-
   .col-2 {
     background: #324047;
   }
+
   .fad {
-    width: 100px;
     color: white;
+    width: 100px;
   }
 
   .form-container{
     background-color: white;
-    padding: 40px;
     border-radius:4px;
+    padding: 40px;
   }
 
   .container h1, h3{
@@ -80,15 +72,15 @@
   }
 
   .selected {
-    font-weight: bold;
     color:#fd6440;
+    font-weight: bold;
   }
 
   .pagination a{
     text-align: center;
     padding-right: 12px;
-
   }
+
   .page-count {
     margin-left:20px;
   }
@@ -97,38 +89,48 @@
     background-color: #fd6440;
   }
 
-.navbar-light .navbar-brand {
-  color: white;
-}
+  .navbar-light .navbar-brand {
+    color: white;
+  }
 
+ .navbar-light .navbar-nav .active .nav-link, {
+    color: white;
+  }
 
-.navbar-light .navbar-nav .active>.nav-link, {
-  color: whte;
-}
+   .navbar-light .navbar-nav .nav-link {
+    color: white;
+  }
 
-.navbar-light .navbar-nav .nav-link {
-  color: white;
-}
-
-@media screen and (min-width: 1050px) {
+  @media only screen and (min-width: 1366px) {
     .navbar{
-      display:none;
-    }
-}
+      display: none;
+  }
+ }
 
+  @media only screen and (max-width: 1366px) {
 
+  #aside{
+    display:none;
+  }
 
-  @media screen and (max-width: 1050px) {
-		  #aside{
-        display:none;
-      }
+  #create-aside{
+    display:none;
+  }
 
-      #create-aside{
-        display:none;
-      }
+   .menu-bar {
+    display:none;
+  }
 
+  .row seperator {
+    max-width:100%;
+    margin-left:0;
+  }
 
-      .menu-bar {
-        display:none;
-      }
-}
+  .navbar {
+    max-width: 100%;
+  }
+
+  .table {
+    margin-left:0;
+  }
+ }
